@@ -1,3 +1,7 @@
+March 4 2010	N.W    <pi3orama@gmail.com>
+    * Rearrange the 'Download' button and map server combobox
+    * Add a language setting for google map
+
 February 15 2010    H.S    <HelderSepu@gmail.com>
     * 0.6.3.0 - At revision: 741
     * Fix bug loading KML files (Issue 124)
